--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,8 +97,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/mensaje2"
                 android:layout_width="match_parent"
@@ -164,7 +162,6 @@
                 </androidx.cardview.widget.CardView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/mensaje3"
@@ -232,6 +229,203 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/mensaje4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/mensaje3"
+                android:layout_marginTop="20dp"
+                >
+
+                <ImageView
+                    android:id="@+id/user4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/user"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/nomb_user4"/>
+
+                <TextView
+                    android:id="@+id/nomb_user4"
+                    android:textSize="20sp"
+                    android:paddingLeft="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="NOMBRE"
+                    app:layout_constraintStart_toEndOf="@+id/user4"
+                    app:layout_constraintEnd_toStartOf="@+id/estado4"
+                    app:layout_constraintBottom_toBottomOf="@+id/user4"
+                    app:layout_constraintHorizontal_weight="8"/>
+
+                <ImageView
+                    android:id="@+id/estado4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintHorizontal_weight="2"
+                    android:src="@drawable/user"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/user4"
+                    app:layout_constraintStart_toEndOf="@+id/nomb_user4"
+                    />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/nomb_user4"
+                    app:layout_constraintStart_toStartOf="@id/nomb_user4"
+                    app:layout_constraintEnd_toStartOf="@id/estado4"
+                    android:layout_marginTop="10dp"
+                    app:cardBackgroundColor="@color/msg"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="30dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="20sp"
+                        android:text="aaaa aaa\naajalka akjsyh"
+                        android:textColor="@color/white"
+                        android:textSize="15dp"
+                        tools:ignore="TextSizeCheck" />
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/mensaje5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/mensaje4"
+                android:layout_marginTop="20dp"
+                >
+
+                <ImageView
+                    android:id="@+id/user5"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/user"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/nomb_user5"/>
+
+                <TextView
+                    android:id="@+id/nomb_user5"
+                    android:textSize="20sp"
+                    android:paddingLeft="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="NOMBRE"
+                    app:layout_constraintStart_toEndOf="@+id/user5"
+                    app:layout_constraintEnd_toStartOf="@+id/estado5"
+                    app:layout_constraintBottom_toBottomOf="@+id/user5"
+                    app:layout_constraintHorizontal_weight="8"/>
+
+                <ImageView
+                    android:id="@+id/estado5"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintHorizontal_weight="2"
+                    android:src="@drawable/user"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/user5"
+                    app:layout_constraintStart_toEndOf="@+id/nomb_user5"
+                    />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/nomb_user5"
+                    app:layout_constraintStart_toStartOf="@id/nomb_user5"
+                    app:layout_constraintEnd_toStartOf="@id/estado5"
+                    android:layout_marginTop="10dp"
+                    app:cardBackgroundColor="@color/msg"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="30dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="20sp"
+                        android:text="aaaa aaa\naajalka akjsyh"
+                        android:textColor="@color/white"
+                        android:textSize="15dp"
+                        tools:ignore="TextSizeCheck" />
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/mensaje6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/mensaje5"
+                android:layout_marginTop="20dp"
+                >
+
+                <ImageView
+                    android:id="@+id/user6"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/user"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/nomb_user6"/>
+
+                <TextView
+                    android:id="@+id/nomb_user6"
+                    android:textSize="20sp"
+                    android:paddingLeft="10dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="NOMBRE"
+                    app:layout_constraintStart_toEndOf="@+id/user6"
+                    app:layout_constraintEnd_toStartOf="@+id/estado6"
+                    app:layout_constraintBottom_toBottomOf="@+id/user6"
+                    app:layout_constraintHorizontal_weight="8"/>
+
+                <ImageView
+                    android:id="@+id/estado6"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintHorizontal_weight="2"
+                    android:src="@drawable/user"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/user6"
+                    app:layout_constraintStart_toEndOf="@+id/nomb_user6"
+                    />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/nomb_user6"
+                    app:layout_constraintStart_toStartOf="@id/nomb_user6"
+                    app:layout_constraintEnd_toStartOf="@id/estado6"
+                    android:layout_marginTop="10dp"
+                    app:cardBackgroundColor="@color/msg"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="30dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="20sp"
+                        android:text="aaaa aaa\naajalka akjsyh"
+                        android:textColor="@color/white"
+                        android:textSize="15dp"
+                        tools:ignore="TextSizeCheck" />
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
