--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintHorizontal_weight="2"
-                    android:src="@drawable/user"
+                    android:src="@drawable/chek"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/user"
                     app:layout_constraintStart_toEndOf="@+id/nomb_user"
@@ -133,7 +133,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintHorizontal_weight="2"
-                    android:src="@drawable/user"
+                    android:src="@drawable/chek"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/user2"
                     app:layout_constraintStart_toEndOf="@+id/nomb_user2"
@@ -199,7 +199,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintHorizontal_weight="2"
-                    android:src="@drawable/user"
+                    android:src="@drawable/chek"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/user3"
                     app:layout_constraintStart_toEndOf="@+id/nomb_user3"
@@ -265,7 +265,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintHorizontal_weight="2"
-                    android:src="@drawable/user"
+                    android:src="@drawable/chek"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/user4"
                     app:layout_constraintStart_toEndOf="@+id/nomb_user4"
@@ -331,7 +331,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintHorizontal_weight="2"
-                    android:src="@drawable/user"
+                    android:src="@drawable/chek"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/user5"
                     app:layout_constraintStart_toEndOf="@+id/nomb_user5"
@@ -397,7 +397,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintHorizontal_weight="2"
-                    android:src="@drawable/user"
+                    android:src="@drawable/chek"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/user6"
                     app:layout_constraintStart_toEndOf="@+id/nomb_user6"
